<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activities"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#222121">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/back_button"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#FFFFFF" />

        <ImageButton
            android:id="@+id/music_button"
            android:tag="Music"
            android:layout_width="173dp"
            android:layout_height="168dp"
            android:layout_marginTop="40dp"
            android:adjustViewBounds="true"
            android:backgroundTint="#D9D9D9"
            android:contentDescription="@string/listen_to_music"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/listen"
            app:layout_constraintEnd_toStartOf="@+id/dancer_button"
            app:layout_constraintHorizontal_bias="0.271"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/all_that_apply_message" />

        <ImageButton
            android:id="@+id/dancer_button"
            android:tag="Dancer"
            android:layout_width="173dp"
            android:layout_height="168dp"
            android:layout_marginTop="40dp"
            android:adjustViewBounds="true"
            android:backgroundTint="#D9D9D9"
            android:contentDescription="@string/dancing"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/dancer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.932"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/all_that_apply_message" />

        <ImageButton
            android:id="@+id/joystick_button"
            android:tag="Gaming"
            android:layout_width="173dp"
            android:layout_height="168dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:backgroundTint="#D9D9D9"
            android:contentDescription="@string/play_video_games"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/joystick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.067"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playing_button" />

        <ImageButton
            android:id="@+id/walk_button"
            android:tag="Walking"
            android:layout_width="173dp"
            android:layout_height="168dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:backgroundTint="#D9D9D9"
            android:contentDescription="@string/go_for_a_walk"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/walk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.932"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dancer_button" />

        <ImageButton
            android:id="@+id/playing_button"
            android:tag="Sports"
            android:layout_width="173dp"
            android:layout_height="168dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:backgroundTint="#D9D9D9"
            android:contentDescription="@string/play_sports"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/playing"
            app:layout_constraintEnd_toStartOf="@+id/walk_button"
            app:layout_constraintHorizontal_bias="0.271"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/music_button" />

        <ImageButton
            android:id="@+id/travel_button"
            android:tag="Traveling"
            android:layout_width="173dp"
            android:layout_height="168dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:backgroundTint="#D9D9D9"
            android:contentDescription="@string/travel_destinations"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/destination"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.932"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/walk_button" />

        <ImageButton
            android:id="@+id/relationship_button"
            android:tag="Socializing"
            android:layout_width="172dp"
            android:layout_height="165dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:backgroundTint="#D9D9D9"
            android:contentDescription="@string/relationships_and_connections"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/relationship"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.067"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/joystick_button" />

        <ImageButton
            android:id="@+id/art_button"
            android:tag="Art"
            android:layout_width="173dp"
            android:layout_height="168dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:backgroundTint="#D9D9D9"
            android:contentDescription="@string/art_activities"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/art"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.932"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/travel_button" />

        <ImageButton
            android:id="@+id/cooking_button"
            android:tag="Cooking"
            android:layout_width="173dp"
            android:layout_height="168dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:backgroundTint="#D9D9D9"
            android:contentDescription="@string/cookingactivities"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/cooking"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.067"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relationship_button" />

        <ImageButton
            android:id="@+id/reading_button"
            android:tag="Reading"
            android:layout_width="173dp"
            android:layout_height="168dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:backgroundTint="#D9D9D9"
            android:contentDescription="@string/other_activities"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/reading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.89"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/art_button" />


        <Button
            android:id="@+id/next_button_activities"
            android:layout_width="212dp"
            android:layout_height="55dp"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="@font/inter"
            android:text="@string/next"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reading_button"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/feel_better_message"
            android:layout_width="317dp"
            android:layout_height="78dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/inter"
            android:text="@string/what_helps_you_feel_better_when_you_are_down"
            android:textAlignment="center"
            android:textColor="#F8F4F4"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/all_that_apply_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/select_all_that_apply"
            android:textColor="#8C8484"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feel_better_message" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>