<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sign_up_id_2"
    android:background="#222121">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="back_button"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#FFFFFF" />

    <Button
        android:id="@+id/sign_up_done"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/sign_up_done"
        android:textColor="@color/black"
        app:iconTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_password_text" />

    <TextView
        android:id="@+id/sign_up_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="45dp"
        android:text="@string/sign_up_password"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_username_text" />

    <ImageView
        android:id="@+id/sign_up_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack"
        app:srcCompat="@drawable/sign_up" />

    <TextView
        android:id="@+id/sign_up_choose_username"
        android:layout_width="156dp"
        android:layout_height="21dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="76dp"
        android:text="@string/sign_up_username"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_img" />

    <EditText
        android:id="@+id/sign_up_username_text"
        android:layout_width="278dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:inputType="text"
        android:hint="Username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_choose_username" />

    <EditText
        android:id="@+id/sign_up_password_text"
        android:layout_width="282dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="Password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_password" />
</androidx.constraintlayout.widget.ConstraintLayout>